# themis-is-judging-you

./: CLAUDE.md  README.md  justfile
backend/: .env.example  .gitignore  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py
backend/app/engine/: aggregator.py  judge.py  runner.py  sampler.py
backend/app/models/: __init__.py  base.py  population.py  run.py  run_log.py  test.py
backend/app/repositories/: __init__.py  population.py  run.py  test.py
backend/app/routers/: __init__.py  populations.py  runs.py  tests.py
backend/app/schemas/: __init__.py  common.py  population.py  run.py  test.py
backend/scripts/: seed.py
docs/: data-structures.md  judge-algorithm.md  setup-accounts.md  tech-stack.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  populations.ts  runs.ts  tests.ts
frontend/src/components/: HistogramChart.tsx  JudgeCard.tsx  PopulationCard.tsx  RunListItem.tsx  ScoreStats.tsx
frontend/src/hooks/: useSSE.ts
frontend/src/lib/: types.ts  utils.ts
frontend/src/pages/: History.tsx  Home.tsx  Populations.tsx  Results.tsx
